fix: update color scheme for better contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,8 +18,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #fff;
-  --foreground: #000;
+  --background: #000;
+  --foreground: #fff;
 }
 
 @theme inline {
@@ -27,13 +27,6 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #000;
-    --foreground: #fff;
-  }
 }
 
 body {
